--- a/css/custom.css
+++ b/css/custom.css
@@ -80,12 +80,33 @@ font-family: 'Oswald', sans-serif;
             line-height: 1.2;
 } 
 
+.drinksText > h2 {
+    color: rgb(0, 0, 0);
+    font-size: 20px;
+    margin-top: 1px;
+    margin-bottom: 4px;
+}
+
+.drinksText > h3 {
+    color: rgb(0, 0, 0);
+    font-size: 15px;
+    margin-top: 1px;
+    margin-bottom: 4px;
+}
+
+.drinksText > p {
+    font-size: 12px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    line-height: 1.4;
+}
+
 .card {
-            border: 1px solid rgba(0,0,0,.125);
-             border-radius: .25rem;
+            border: 1px solid rgba(0,0,0,.15);
+            /* border-radius: .25rem; */
             margin-top: 10px;
             margin-bottom: 10px;
-            background-color: rgba(182, 231, 243, 1.0);
+            background-color: rgb(205, 239, 248);
 }
 .card-text{
     font-size: 12px;
@@ -136,8 +157,7 @@ font-family: 'Oswald', sans-serif;
     padding-left: 3px;
     }
 
-/* New CSS rules to better position the navbar and increase its height, Bootstrap defaults tend to make your site look like a Bootstrap clone! 
-*/
+    /* From bootsrap.css, and modidified to emulate the nav-bar menu styling */
 .nav-tabs .nav-link.active, .nav-tabs .nav-item.show .nav-link {
     color:  #760003; /* Font color for active font */
     background-color: #3399ff; /* Blue color for background */
@@ -158,6 +178,16 @@ font-family: 'Oswald', sans-serif;
 }
 
 /*Gallery and X3D*/
+.gallery .img-thumbnail{
+    background-color: rgba(255, 255, 255, 0.0);
+    padding: 0.25rem;
+    margin: 5px;
+    border: 1px solid #dee2e6;
+    border-radius: 0.25rem;
+    max-width: 43%;
+    height: auto;
+}
+
 .gallery-header {
     color: white;
 }
@@ -188,7 +218,7 @@ X3D, x3d {
     /* background-color: rgba(0, 0, 255, 0.3);  */
     border-color: black; 
     border-style: solid;
-    border-width: 0px;
+    border-width: 1px;
     margin-top: 0px;
     padding: 0px;
 }
@@ -196,7 +226,7 @@ X3D, x3d {
 .camera-btns > p  {
     font-size: 15px;
     color: red;
-    padding-left: 0px;
+    padding: 5px 0px;
     font-weight: 900; 
 }
 
@@ -211,7 +241,7 @@ X3D, x3d {
 }
 
 .btn-responsive {
-    padding: 4px 9px;
+    padding: 5px 5px;
     font-size: 60%;
     line-height: 1.2;
     white-space: normal !important;
@@ -222,9 +252,9 @@ X3D, x3d {
 */
 .navbar_coca_cola {
     background-color: #760003; /* Set navbar background color */
-     border-color: rgba(250, 250, 107, 0.25); 
+     border-color: rgba(250, 250, 107, 0.507); 
      border-style: solid; 
-    border-width: 0px;
+    border-width: 1px;
     min-height: 70px;
 }
 
@@ -271,11 +301,14 @@ X3D, x3d {
 /* These next two CSS rules control the style of the icon bar */
 .navbar_coca_cola .navbar-toggler {
     border-color: white;
-    outline: none !important;
 }
 
 .navbar_coca_cola  .navbar-toggler-icon {
     background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(255, 255, 255, 1.0)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
+}
+
+.navbar_coca_cola .navbar-toggler {
+    outline: none !important;
 }
 
 /* The dropdown menu*/
@@ -287,12 +320,12 @@ X3D, x3d {
 }
 
 .dropdown-menu .dropdown-item {
-    color: #eb0025;
+    color: #f70126;
 }
 
 .dropdown-menu .dropdown-item:hover {
     color: #030303;
-    background-color: #e98074;
+    background-color: #753029;
 }
 
 /* CSS rule to style the footer */
@@ -340,9 +373,9 @@ X3D, x3d {
     font-size: 1em;
 }
 
-.fa-facebook-square:before {
+.fa-linkedin-square:before {
     content: "\f082";
-    color: whitesmoke;
+    color: lightblue;
     font-size: 1em; 
 }
 
@@ -363,8 +396,28 @@ X3D, x3d {
         margin-top: 7%;
     }
 
+    .drinksText > h2 {
+        color: rgb(0, 0, 0);
+        font-size: 25px;
+        margin-top: 0px;
+        margin-bottom: 5px;
+    }
+    
+    .drinksText > h3 {
+        color: rgb(0, 0, 0);
+        font-size: 18px;
+        margin-top: 5px;
+        margin-bottom: 5px;
+    }
+    
+    .drinksText > p {
+        font-size: 14px;
+        margin-top: 10px;
+        margin-bottom: 10px;
+        line-height: 1.4;
+    }
+
     .card {
-        /* border-radius: .25rem;*/
         margin-top: 10px;
         margin-bottom: 10px;
         background-color: rgb(202, 181, 181);
@@ -377,7 +430,7 @@ X3D, x3d {
 
     /* CSS rule to style the footer */
     .footer {
-        background-color: #44d003;
+        background-color: #4ce206db;
         height: 60px;
     }
     
@@ -398,17 +451,10 @@ X3D, x3d {
         padding-top: 5px;
     }
 
-    .btn-responsive {
-        padding: 2px 9px;
-        font-size: 90%;
-        line-height: 1.2;
-        white-space: normal !important;
-    }
-
     .model3D  {
-        height: 310px;
+        height: 210px;
     }
-     }
+ }
 
 /* Medium devices (tablets, 768px and up) */
 @media (min-width: 768px) { 
@@ -420,6 +466,27 @@ X3D, x3d {
         background-image: url(../assets/images/main_3D_538.jpg);
         background-repeat: no-repeat;
         height: 363px;
+    }
+
+    .drinksText > h2 {
+        color: rgb(0, 0, 0);
+        font-size: 27px;
+        margin-top: 0px;
+        margin-bottom: 5px;
+    }
+    
+    .drinksText > h3 {
+        color: rgb(0, 0, 0);
+        font-size: 20px;
+        margin-top: 5px;
+        margin-bottom: 5px;
+    }
+    
+    .drinksText > p {
+        font-size: 15px;
+        margin-top: 10px;
+        margin-bottom: 10px;
+        line-height: 1.4;
     }
 
     .card {
@@ -504,16 +571,16 @@ X3D, x3d {
     /* CSS rule to style the footer */
     .footer {
         background-color: #246a01;
-        height: 65px;
+        height: 60px;
     }
     
     .navbar-text > a {
-        font-size: 12px;
+        font-size: 10px;
     }
     
     .navbar-text > p {
         color: rgb(188, 57, 5);
-        font-size: 20px;
+        font-size: 18px;
     }
     
     .copyright {
@@ -524,15 +591,8 @@ X3D, x3d {
         padding-top: 7px;
     }
 
-    btn-responsive {
-        padding: 4px 9px;
-        font-size: 130%;
-        line-height: 1.2;
-        white-space: normal !important;
-    }
-
     .model3D  {
-        height: 380px;
+        height: 220px;
     }
      }
 
@@ -568,7 +628,6 @@ X3D, x3d {
     }
 
     .card {
-        /* border-radius: .25rem;*/
         margin-top: 10px;
         margin-bottom: 10px;
         background-color: rgb(185, 185, 178);
@@ -646,15 +705,8 @@ X3D, x3d {
         padding-top: 7px;
     }
 
-    .btn-responsive {
-        padding: 4px 9px;
-        font-size: 150%;
-        line-height: 1.2;
-        white-space: normal !important;
-    }
-
     .model3D  {
-        height: 450px;
+        height: 250px;
     }
      }
 
@@ -667,7 +719,7 @@ X3D, x3d {
     }
 
     .model3D  {
-        height: 550px;
+        height: 300px;
     }
     
     /* CSS rule to style the footer */
@@ -718,6 +770,4 @@ X3D, x3d {
     .social {
         padding-top: 7px;
     }
-     }
-
-
+}
