back to lab6 with addition of fanta

--- a/gallery/styles/gallery_div.css
+++ b/gallery/styles/gallery_div.css
@@ -6,7 +6,7 @@
 
 #gallery_cell {
 	background: ivory;
-	border: 1px solid red;
+	border: 1px solid black;
 	width: 20%;
 	height: 20%;
 	border-radius: 10px;
